이미지 테스트

--- a/_posts/2020/common/2020-01-21-01-post.md
+++ b/_posts/2020/common/2020-01-21-01-post.md
@@ -14,7 +14,7 @@ categories: Company Common WAS JENNIFER
 ##증   상 : 
    - Spring Boot hikari CP
 
-   ![image2018-8-17_14-33-59.png](./image/image2018-8-17_14-33-59.png)
+   ![image2018817143359.png](./image/image2018817143359.png)
 
    - jdbc_datasource_class
 
