--- a/_posts/2020/common/2020-01-21-01-post.md
+++ b/_posts/2020/common/2020-01-21-01-post.md
@@ -14,11 +14,9 @@ categories: Company Common WAS JENNIFER
 ##증   상 : 
    - Spring Boot hikari CP
 
-![2018817143359.png](./image/2018817143359.png)
+![20171019(DBWAS).png](./image/20171019(DBWAS).png)
 
    - jdbc_datasource_class
-
-![image2018-8-17_14-34-36.png](./image/image2018-8-17_14-34-36.png)
 
 ##테스트 결과
  - Spring Boot hikari CP
