--- a/_posts/2020/common/2020-01-21-01-post.md
+++ b/_posts/2020/common/2020-01-21-01-post.md
@@ -14,7 +14,7 @@ categories: Company Common WAS JENNIFER
 ##증   상 : 
    - Spring Boot hikari CP
 
-    ![20171019(DBWAS).png](./image/20171019(DBWAS).png)
+    ![2018817143359.png](./image/2018817143359.png)
 
    - jdbc_datasource_class
 
