이미지 테스트

--- a/_posts/2020/common/2020-01-21-01-post.md
+++ b/_posts/2020/common/2020-01-21-01-post.md
@@ -14,7 +14,7 @@ categories: Company Common WAS JENNIFER
 ## 증   상 : 
    - Spring Boot hikari CP
 
-![2018817143359.png](./image/2018817143359.png)
+![image2018-8-17_14-34-36.png](./image/image2018-8-17_14-34-36.png)
 
    - jdbc_datasource_class
 
