--- a/_posts/2020/common/2020-01-21-01-post.md
+++ b/_posts/2020/common/2020-01-21-01-post.md
@@ -14,6 +14,7 @@ categories: Company Common WAS JENNIFER
 ## 증   상 : 
    - Spring Boot hikari CP
 
+![image2018-8-17_14-33-59.png](./image/image2018-8-17_14-33-59.png)
 ![image2018-8-17_14-34-36.png](./image/image2018-8-17_14-34-36.png)
 
    - jdbc_datasource_class
