이미지 테스트

--- a/_posts/2020/common/2020-01-20-03-post.md
+++ b/_posts/2020/common/2020-01-20-03-post.md
@@ -57,6 +57,10 @@ categories: Company Common WAS DB
 
 ![20171019(DBWAS).png](./image/20171019(DBWAS).png)
 
+![image2018-8-17_14-33-59.png](./image/image2018-8-17_14-33-59.png)
+
+![image2018-8-17_14-34-36.png](./image/image2018-8-17_14-34-36.png)
+
 ## 결론
 
     서비스 중에 WAS 와 DB 간의 연결 처리 중 순단 시 Application Exception 이 발생 되어 WAS 내에서는 해당 연결을 정리 하고 새로운 연결을 생성
