--- a/_posts/2020/common/2020-01-20-03-post.md
+++ b/_posts/2020/common/2020-01-20-03-post.md
@@ -53,13 +53,10 @@ categories: Company Common WAS DB
             DB Serve 내의 연결 갯수 15개 유지
                 신규 생성 갯수 8개
 
-## Application Exception
+## Application Exception<br>
 
-![20171019(DBWAS).png](./image/20171019(DBWAS).png)
+![20171019(DBWAS)](./image/20171019(DBWAS).png)
 
-![image2018-8-17_14-33-59.png](./image/image2018-8-17_14-33-59.png)
-
-![image2018-8-17_14-34-36.png](./image/image2018-8-17_14-34-36.png)
 
 ## 결론
 
