--- a/_posts/2020/common/2020-01-20-03-post.md
+++ b/_posts/2020/common/2020-01-20-03-post.md
@@ -55,7 +55,7 @@ categories: Company Common WAS DB
 
 ## Application Exception<br>
 
-![20171019(DBWAS)](./image/20171019(DBWAS).png)
+![20171019(DBWAS)]({{site.url}}/image/20171019(DBWAS).png)
 
 
 ## 결론
