--- a/_posts/2020/common/2020-01-20-03-post.md
+++ b/_posts/2020/common/2020-01-20-03-post.md
@@ -53,7 +53,7 @@ categories: Company Common WAS DB
             DB Serve 내의 연결 갯수 15개 유지
                 신규 생성 갯수 8개
 
-## Application Exception<br>
+## Application Exception
 
 ![20171019(DBWAS)]({{site.url}}/image/20171019(DBWAS).png)
 
