--- a/_posts/2020/common/2020-01-21-01-post.md
+++ b/_posts/2020/common/2020-01-21-01-post.md
@@ -14,12 +14,11 @@ categories: Company Common WAS JENNIFER
 ## 증   상 : 
    - Spring Boot hikari CP
 
-![image2018-8-17_14-33-59.png](./image/image2018-8-17_14-33-59.png)
-
-![image2018-8-17_14-34-36.png](./image/image2018-8-17_14-34-36.png)
+![image2018-8-17_14-33-59.png]({{site.url}}/image/image2018-8-17_14-33-59.png)
 
    - jdbc_datasource_class
-
+   
+![image2018-8-17_14-34-36.png]({{site.url}}/image/image2018-8-17_14-34-36.png)
 ## 테스트 결과
  - Spring Boot hikari CP
     - db_connection_get
