이미지 테스트

--- a/_posts/2020/2020-01/2020-01-21-02-post.md
+++ b/_posts/2020/2020-01/2020-01-21-02-post.md
@@ -13,7 +13,7 @@ categories: Company Common WAS
 
 ### 히스토리
 
-    - 검색 개발팀 (김두진M) tMallDomain.jar 내의 검색 공통 부분 수정
+    - 검색 개발팀 (김??M) tMallDomain.jar 내의 검색 공통 부분 수정
 
     - 검색 개발팀 수정 부분 테스트 및 검수(대상 : 코스모스 사용 부분)
 
