--- a/_posts/2020/2020-01/2020-01-20-02-post.md
+++ b/_posts/2020/2020-01/2020-01-20-02-post.md
@@ -1,7 +1,7 @@
 ---
 title: "Apache Proxy Module(ProxyPass to HTTP[S])"
 date: 2020-01-20 
-categories: Company Common Apache
+categories: Apache
 ---
 ### Apache Proxy Module(ProxyPass to HTTP[S])
 
