--- a/_posts/2020/2020-01/2020-01-20-03-post.md
+++ b/_posts/2020/2020-01/2020-01-20-03-post.md
@@ -1,7 +1,7 @@
 ---
 title: "WAS < - > DB 간 세션 테스트"
 date: 2020-01-20 
-categories: Company Common WAS DB
+categories: WAS DB
 ---
 ### WAS < - > DB 간 세션 테스트
 
