--- a/_posts/2020/2020-01/2020-01-21-01-post.md
+++ b/_posts/2020/2020-01/2020-01-21-01-post.md
@@ -1,7 +1,7 @@
 ---
 title: "Spring Boot Active DB Connection 정보 수집 방법"
 date: 2020-01-21 
-categories: Company Common WAS JENNIFER
+categories: WAS JENNIFER
 ---
 ### Spring Boot Active DB Connection 정보 수집 방법
 
