--- a/_posts/2020/2020-01/2020-01-21-02-post.md
+++ b/_posts/2020/2020-01/2020-01-21-02-post.md
@@ -1,7 +1,7 @@
 ---
 title: "Search NullPointException(2017.10.13)"
 date: 2020-01-21 
-categories: Company Common WAS
+categories: WAS
 ---
 ## Search NullPointException(2017.10.13)
 
