--- a/_posts/2020/2020-01/2020-01-20-01-post.md
+++ b/_posts/2020/2020-01/2020-01-20-01-post.md
@@ -1,7 +1,7 @@
 ---
 title: "Apache Sorl Jennifer 연동"
 date: 2020-01-20 
-categories: Apache
+categories: [ jennifer ] 
 ---
 ### Apache Sorl Jennifer 연동(2017.08.29)
 
