--- a/_posts/2020/2020-01/2020-01-20-01-post.md
+++ b/_posts/2020/2020-01/2020-01-20-01-post.md
@@ -1,10 +1,10 @@
 ---
-title: "Apache Sorl Jennifer 연동"
-date: 2020-01-20 
-categories: [ jennifer ] 
+title: Apache Sorl Jennifer 연동
+author: Lucifer
+date: 2017-08-29 
+categories: jennifer
+layout: post
 ---
-### Apache Sorl Jennifer 연동(2017.08.29)
-
 현상
     Search Service 내의 Sorl 서버의 서비스 지연이 발생
  
