--- a/_posts/2020/2020-01/2020-01-20-02-post.md
+++ b/_posts/2020/2020-01/2020-01-20-02-post.md
@@ -1,7 +1,9 @@
 ---
 title: "Apache Proxy Module(ProxyPass to HTTP[S])"
+author: Lucifer
 date: 2020-01-20 
 categories: Apache
+layout: post
 ---
 ### Apache Proxy Module(ProxyPass to HTTP[S])
 
