--- a/_posts/2020/2020-01/2020-01-20-03-post.md
+++ b/_posts/2020/2020-01/2020-01-20-03-post.md
@@ -1,7 +1,9 @@
 ---
 title: "WAS < - > DB 간 세션 테스트"
+author: Lucifer
 date: 2020-01-20 
 categories: WAS DB
+layout: post
 ---
 ### WAS < - > DB 간 세션 테스트
 
