--- a/_posts/2020/2020-01/2020-01-21-01-post.md
+++ b/_posts/2020/2020-01/2020-01-21-01-post.md
@@ -1,7 +1,9 @@
 ---
 title: "Spring Boot Active DB Connection 정보 수집 방법"
+author: Lucifer
 date: 2020-01-21 
 categories: WAS JENNIFER
+layout: post
 ---
 ### Spring Boot Active DB Connection 정보 수집 방법
 
