--- a/_posts/2020/2020-01/2020-01-21-02-post.md
+++ b/_posts/2020/2020-01/2020-01-21-02-post.md
@@ -1,7 +1,9 @@
 ---
 title: "Search NullPointException(2017.10.13)"
+author: Lucifer
 date: 2020-01-21 
 categories: WAS
+layout: post
 ---
 ## Search NullPointException(2017.10.13)
 
