이미지 테스트

--- a/_posts/2020/2020-01/2020-01-20-02-post.md
+++ b/_posts/2020/2020-01/2020-01-20-02-post.md
@@ -5,9 +5,7 @@ date: 2020-01-20
 categories: Apache
 layout: post
 ---
-### Apache Proxy Module(ProxyPass to HTTP[S])
-
-## mod proxy & Tomcat
+mod proxy & Tomcat
 mod_proxy http,ajp로 Tomcat 연결(http://tomcat.apache.org/connectors-doc-archive/jk2/proxy.html)
 
 mod_proxy http,ajp로 Tomcat 연결 2(http://tomcat.apache.org/tomcat-6.0-doc/proxy-howto.html)
