--- a/_posts/2020/2020-01/2020-01-20-03-post.md
+++ b/_posts/2020/2020-01/2020-01-20-03-post.md
@@ -5,13 +5,10 @@ date: 2020-01-20
 categories: WAS DB
 layout: post
 ---
-### WAS < - > DB 간 세션 테스트
-
-## 목적  
+목적  
     WAS 와  DB 간 사이의 방화벽 & 스위치 작업시 DB 상의 가비지 세션이 생기는지에 대한 확인
  
-
-## 테스트 환경
+테스트 환경
 
     대상 WEB / WAS : 11PROJECTb-nwas-dev10
 
@@ -42,7 +39,7 @@ layout: post
         DB 서버 연결 겟수 상태 체크
  
 
-## 테스트 결과
+ 테스트 결과
     AS-IS 
 
         DB Server 내의 연결 갯수 7개
@@ -55,12 +52,12 @@ layout: post
             DB Serve 내의 연결 갯수 15개 유지
                 신규 생성 갯수 8개
 
-## Application Exception
+ Application Exception
 
 ![20171019(DBWAS)]({{site.url}}/image/20171019(DBWAS).png)
 
 
-## 결론
+ 결론
 
     서비스 중에 WAS 와 DB 간의 연결 처리 중 순단 시 Application Exception 이 발생 되어 WAS 내에서는 해당 연결을 정리 하고 새로운 연결을 생성
 
