--- a/_posts/2020/2020-01/2020-01-21-01-post.md
+++ b/_posts/2020/2020-01/2020-01-21-01-post.md
@@ -5,15 +5,14 @@ date: 2020-01-21
 categories: WAS JENNIFER
 layout: post
 ---
-### Spring Boot Active DB Connection 정보 수집 방법
 
-## 문제점 : 
+ 문제점 : 
    - Jennifer 에서 active db Connection 수집 및 표시가 안되는 증상
 
-## 원   인 : 
+ 원   인 : 
    - Spring Boot 가 사용 하는 Datasource class 가 Jennifer 가 기본값으로 지원하지 않아 DB Active Connection 을 수집 못함.
 
-## 증   상 : 
+ 증   상 : 
    - Spring Boot hikari CP
 
 ![image2018-8-17_14-33-59.png]({{site.url}}/image/image2018-8-17_14-33-59.png)
@@ -22,7 +21,7 @@ layout: post
    
 ![image2018-8-17_14-34-36.png]({{site.url}}/image/image2018-8-17_14-34-36.png)
 
-## 테스트 결과
+ 테스트 결과
  - Spring Boot hikari CP
     - db_connection_get
     - jdbc_datasource_class
