--- a/_posts/2020/2020-01/2020-01-21-02-post.md
+++ b/_posts/2020/2020-01/2020-01-21-02-post.md
@@ -5,15 +5,15 @@ date: 2020-01-21
 categories: WAS
 layout: post
 ---
-## Search NullPointException(2017.10.13)
+ Search NullPointException(2017.10.13)
 
-### 일시 : 2017.10.13
+ 일시 : 2017.10.13
 
-### 현상 : 검색시 검색 결과 없음.
+ 현상 : 검색시 검색 결과 없음.
 
-### 원인 : 검증 되지 않은 소스 상용에 반영 이슈
+ 원인 : 검증 되지 않은 소스 상용에 반영 이슈
 
-### 히스토리
+ 히스토리
 
     - 검색 개발팀 (김??M) tMallDomain.jar 내의 검색 공통 부분 수정
 
@@ -35,12 +35,12 @@ layout: post
 
     - Zone 스위치 이후 정상화
 
-### Error 
+ Error 
 
     - Application Error Log
 
 ![Mobile.jpg]({{site.url}}/image/Mobile.jpg)
 
-### EAS 미통지
+ EAS 미통지
 
     - Error LOG 상 WARN 상태 일시 EAS 알람 미 발생
