이미지 테스트

--- a/_posts/2020/2020-01/2020-01-20-02-post.md
+++ b/_posts/2020/2020-01/2020-01-20-02-post.md
@@ -10,14 +10,14 @@ mod_proxy http,ajp로 Tomcat 연결(http://tomcat.apache.org/connectors-doc-arch
 
 mod_proxy http,ajp로 Tomcat 연결 2(http://tomcat.apache.org/tomcat-6.0-doc/proxy-howto.html)
 
-    # AJP PROXY 연결
+     AJP PROXY 연결
 
     <Location /examples/>
        ProxyPass ajp://localhost:8009/examples/
     </Location>
      
-    # Apache의 경로와 Tomcat의 경로(혹은 context root path)가 다를 경우에는 reverse가 필요하다.
-    # HTTP PROXY 연결
+     Apache의 경로와 Tomcat의 경로(혹은 context root path)가 다를 경우에는 reverse가 필요하다.
+     HTTP PROXY 연결
 
     <Location /examples/>
         ProxyPass http://localhost:8080/examples/
